Create toolbar with login

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,1 @@
-<div *ngIf="info.token; else loggedOut">
-  <h5 class="text-primary">Hello, Home!</h5>
-  <p>
-    <strong>Username: </strong> {{info.username}} <br/>
-    <strong>Role:</strong> {{info.authorities}} <br/>
-    <strong>Token:</strong> {{info.token}} <br/>
-  </p>
-  <button class="btn btn-secondary" (click)="logout()">Logout</button>
-</div>
-
-<ng-template #loggedOut>
-  Please login.
-</ng-template>
+<h2>HELOOO HOOOME</h2>
