--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,32 +2,62 @@
   Logged in as {{role}}.
 </div>
 
-<ng-template #loggedOut>
-  <div class="row col-sm-6" style="max-width:350px;">
-    <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
-      <div class="form-group">
-        <label>Username</label>
-        <input type="text" class="form-control" name="username" [(ngModel)]="form.username" #username="ngModel"
-               required/>
-        <!--        <div *ngIf="f.submitted && username.invalid">-->
-        <!--          <div *ngIf="username.errors.required">Username is required</div>-->
-        <!--        </div>-->
-      </div>
-      <div class="form-group">
-        <label>Password</label>
-        <input type="password" class="form-control" name="password" [(ngModel)]="form.password" #password="ngModel"
-               required/>
-<!--        <div *ngIf="f.submitted && password.invalid">-->
-<!--          <div *ngIf="password.errors.required">Password is required</div>-->
+<!--<ng-template #loggedOut>-->
+<!--  <div class="row col-sm-6" style="max-width:350px;">-->
+<!--    <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>-->
+<!--      <div class="form-group">-->
+<!--        <label>Username</label>-->
+<!--        <input type="text" class="form-control" name="username" [(ngModel)]="form.username" #username="ngModel"-->
+<!--               required/>-->
+<!--        &lt;!&ndash;        <div *ngIf="f.submitted && username.invalid">&ndash;&gt;-->
+<!--        &lt;!&ndash;          <div *ngIf="username.errors.required">Username is required</div>&ndash;&gt;-->
+<!--        &lt;!&ndash;        </div>&ndash;&gt;-->
+<!--      </div>-->
+<!--      <div class="form-group">-->
+<!--        <label>Password</label>-->
+<!--        <input type="password" class="form-control" name="password" [(ngModel)]="form.password" #password="ngModel"-->
+<!--               required/>-->
+<!--        &lt;!&ndash;        <div *ngIf="f.submitted && password.invalid">&ndash;&gt;-->
+<!--        &lt;!&ndash;          <div *ngIf="password.errors.required">Password is required</div>&ndash;&gt;-->
+<!--        &lt;!&ndash;        </div>&ndash;&gt;-->
+<!--      </div>-->
+<!--      <div class="form-group">-->
+<!--        <button class="btn btn-primary">Login</button>-->
+<!--        <div *ngIf="f.submitted && isLoginFailed" class="alert alert-danger">-->
+<!--          Login failed: {{errorMessage}}-->
 <!--        </div>-->
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary">Login</button>
-        <div *ngIf="f.submitted && isLoginFailed" class="alert alert-danger">
-          Login failed: {{errorMessage}}
+<!--      </div>-->
+<!--    </form>-->
+<!--    <hr/>-->
+<!--  </div>-->
+<!--</ng-template>-->
+
+<ng-template #loggedOut>
+  <mat-card>
+    <mat-card-title>Login</mat-card-title>
+    <mat-card-content>
+      <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <p>
+          <mat-form-field>
+            <input type="text" matInput placeholder="Username" formControlName="username">
+          </mat-form-field>
+        </p>
+
+        <p>
+          <mat-form-field>
+            <input type="password" matInput placeholder="Password" formControlName="password">
+          </mat-form-field>
+        </p>
+
+        <p *ngIf="errorMessage" class="error">
+          {{ errorMessage }}
+        </p>
+
+        <div class="button">
+          <button type="submit" mat-button>Login</button>
         </div>
-      </div>
-    </form>
-    <hr/>
-  </div>
+
+      </form>
+    </mat-card-content>
+  </mat-card>
 </ng-template>
