--- a/src/app/users/add-user-dialog.html
+++ b/src/app/users/add-user-dialog.html
@@ -1,31 +1,31 @@
 <h1 mat-dialog-title>Create user</h1>
 <div mat-dialog-content>
   <p>
-    <mat-form-field>
+    <mat-form-field style="width: 100%">
       <mat-label>Username</mat-label>
-      <input matInput [(ngModel)]="user.username">
+      <input matInput required [(ngModel)]="user.username">
     </mat-form-field>
   </p>
   <p>
-    <mat-form-field>
+    <mat-form-field style="width: 100%">
       <mat-label>Password</mat-label>
       <input matInput [(ngModel)]="user.password">
     </mat-form-field>
   </p>
   <p>
-    <mat-form-field>
+    <mat-form-field style="width: 100%">
       <mat-label>Name</mat-label>
       <input matInput [(ngModel)]="user.name">
     </mat-form-field>
   </p>
   <p>
-    <mat-form-field>
+    <mat-form-field style="width: 100%">
       <mat-label>Email</mat-label>
       <input type="email" matInput [(ngModel)]="user.email">
     </mat-form-field>
   </p>
   <p>
-    <mat-form-field>
+    <mat-form-field style="width: 100%">
       <mat-label>Phone</mat-label>
       <input matInput [(ngModel)]="user.phone">
     </mat-form-field>
