--- a/src/app/mapper/mapper.component.html
+++ b/src/app/mapper/mapper.component.html
@@ -1,5 +1,5 @@
 <div class="tab-header">
-  <h1>Users tab</h1>
+  <h1>Map Room type tab</h1>
 
   <button mat-raised-button color="accent" (click)="fileInput.click(); fileInput.value = ''">
     <span>Map Room type</span>
@@ -48,9 +48,7 @@
     <!-- Regular expression Column -->
     <ng-container matColumnDef="regExp">
       <th mat-header-cell *matHeaderCellDef>Regular expression</th>
-      <td mat-cell *matCellDef="let element">{{element.rules[0].regExp}}
-
-      </td>
+      <td mat-cell *matCellDef="let element">{{element.rules[0].regExp}}</td>
       <!--      <td mat-cell *matCellDef="let element">-->
       <!--        <mat-form-field appearance="fill">-->
       <!--          <mat-select>-->
