--- a/src/app/mapper/change-rule-dialog/change-rule-dialog.component.html
+++ b/src/app/mapper/change-rule-dialog/change-rule-dialog.component.html
@@ -11,7 +11,7 @@
       </mat-optgroup>
     </mat-select>
   </mat-form-field>
-
+  <button class="add-button" mat-button (click)="openAddRuleDialog()">New rule</button>
 </div>
 
 <div mat-dialog-actions>
