--- a/src/app/mapper/mapper.component.html
+++ b/src/app/mapper/mapper.component.html
@@ -45,9 +45,9 @@
       <td mat-cell *matCellDef="let element">{{element.rules[0].paramName}}</td>
     </ng-container>
 
-    <!-- Regular expression Column -->
+    <!-- Rule expression Column -->
     <ng-container matColumnDef="regExp">
-      <th mat-header-cell *matHeaderCellDef>Regular expression</th>
+      <th mat-header-cell *matHeaderCellDef>Rule expression</th>
       <td mat-cell *matCellDef="let element">{{element.rules[0].regExp}}</td>
     </ng-container>
 
