--- a/src/app/rules-view/rules-view.component.html
+++ b/src/app/rules-view/rules-view.component.html
@@ -24,9 +24,9 @@
       <td mat-cell *matCellDef="let element">{{element.code}}</td>
     </ng-container>
 
-    <!-- Regular expression Column -->
+    <!-- Rule expression Column -->
     <ng-container matColumnDef="regExp">
-      <th mat-header-cell *matHeaderCellDef>Regular expression</th>
+      <th mat-header-cell *matHeaderCellDef>Rule expression</th>
       <td mat-cell *matCellDef="let element">{{element.regExp}}</td>
     </ng-container>
 
