Create Organizations component and bug fixes

--- a/src/app/ota-dictionaries/ota-dictionaries.component.html
+++ b/src/app/ota-dictionaries/ota-dictionaries.component.html
@@ -25,7 +25,7 @@
           <button mat-icon-button color="accent" (click)="openRenameOtaDictionaryDialog(element)">
             <mat-icon>edit</mat-icon>
           </button>
-          <button *ngIf="role === 'admin'" mat-icon-button color="accent" (click)="deleteOtaDictionary(element.id)">
+          <button mat-icon-button color="accent" (click)="deleteOtaDictionary(element.id)">
             <mat-icon>delete</mat-icon>
           </button>
         </mat-cell>
