--- a/src/app/organizations/organizations.component.css
+++ b/src/app/organizations/organizations.component.css
@@ -18,10 +18,10 @@
 
 .add-button {
   margin-right: 10px;
-  padding-left: 10%;
+  margin-left: 10%;
 }
 
-.users-table-block {
+.organizations-table-block {
   width: 80%;
-  margin-left: 10%;
+  padding-left: 10%;
 }
