--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -2,6 +2,7 @@
   <span routerLink="">OTA Mapper</span>
   <span class="example-spacer"></span>
   <div fxShow="true" fxHide.lt-md="true">
+    <a *ngIf="role === 'admin'" mat-button routerLink="/organizations">Organizations</a>
     <a *ngIf="role === 'admin'" mat-button routerLink="/user-management">User management</a>
     <a *ngIf="role" mat-button routerLink="/ota-dictionaries">OTA Dictionaries</a>
     <a *ngIf="role" mat-button routerLink="/rules">Mapping rules</a>
