--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -37,6 +37,12 @@
       <td mat-cell *matCellDef="let element">{{element.phone}}</td>
     </ng-container>
 
+    <!-- Organization Column -->
+    <ng-container matColumnDef="organization">
+      <th mat-header-cell *matHeaderCellDef>Organization</th>
+      <td mat-cell *matCellDef="let element">{{element.organization}}</td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row
         (click)="openEditUserDialog(row)"
